[FIX] sign: make customer field usable on mobile
In desktop, some tweaks has been done to an editable list view
to transform a record value in a label....
See .o_sign_flat_o2m.

This customization allow us to directly fill in the partner_id field
via signer_ids and having the impression that it belongs to the form
view.

But it didn't worked on mobile.
To be clear, this code will have to be deleted in the future.
The good solution would be to find a way to have 'partner_id' field
directly in 'sign.send.request'.

closes odoo/enterprise#15662

Task-id: 2387621
X-original-commit: 776676cc528211def291737a9f83f7d6bd5def87

--- a/sign/static/src/scss/sign_backend.scss
+++ b/sign/static/src/scss/sign_backend.scss
@@ -62,7 +62,13 @@
             tbody > tr > td:nth-child(1) {
                 width: 150px !important;
                 @include media-breakpoint-down(md) {
-                    width: 100px !important;
+                    display: block;
+                    width: 100% !important;
+                    font-weight: normal;
+                    color: $o-brand-secondary!important;
+                    > span {
+                        margin-bottom: 0!important;
+                    }
                 }
                 color:#666666 !important;
                 font-weight: bold;
@@ -72,10 +78,14 @@
                 border-bottom: none
             }
             tbody > tr > td:nth-child(2) {
+                @include media-breakpoint-down(md) {
+                    display: block;
+                    min-height: 47px;
+                }
                 border-right-style: none;
                 &:not([style]) {
                     padding-right: 0;
-                    border: 1px solid #666666;
+                    border: 2px solid #666666;
                     border-top-style: none;
                     border-right-style: none;
                     border-left-style: none;
